<resources>
    <string name="app_name">My Budget</string>

    <string name="facebook_app_id">1046346218880451</string>
    <string name="fb_login_protocol_scheme">fb1046346218880451</string>

    <string name="revenue">Revenue</string>
    <string name="expense">Expense</string>
    <string name="register">Register</string>
    <string name="date_of_birth">Date of Birth Optional</string>
    <string name="confirm_passwrd">Confirm Passwrd</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_reference_code_optional">Enter Reference Code - Optional</string>
    <string name="start_amount">Start Amount</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="item_name">Item Name</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="enterAmount">Enter an Amount</string>
    <string name="enterItem">Enter an item name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ghCurrency">GHC Ghana Cedis</string>
    <string name="usCurrency">$ American Dollar</string>
    <string name="ukCurr">£ British Pound</string>
    <string name="euroCurr">€ Euro</string>
    <string name="japanCurr">¥ Japanese Yen</string>
    <string name="customCurr">Custom Currency</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="nigNaira">Nigerian Naira</string>
    <string name="cfaFranc">CFA Franc</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="select_currency">Select Currency</string>
    <string name="youHave">You have</string>
    <string name="youHaveSpent">You have spent</string>
    <string name="remaining">remaining</string>
    <string name="new_budget">New Budget</string>
    <string name="view_expenses_made">View Expenses Made</string>
    <string name="addnewBudget">Create a new Budget</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="budget_name">Budget Name</string>
    <string name="date">Date</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="select_period_type">Select Period Type</string>
    <string name="cancelled">Cancelled</string>
    <string name="submitCurr">Submit Currency</string>
    <string name="submitAmount">Submit Amount</string>
    <string name="submitRef">Submit Reference</string>
    <string name="skip">Skip</string>
    <string name="total_n0_00">Total\n0.00</string>
    <string name="spent_n0_00">Spent\n0.00</string>
    <string name="balance_n0_00">Balance\n0.00</string>
    <string name="quantity">Quantity</string>
    <string name="total_balance">Total Balance</string>
    <string name="copy_and_create_new_budget">Copy and Create New Budget</string>
    <string name="switch_to_budget">Switch to Budget</string>
    <string name="view_details">View Details</string>
    <string name="newBudgetName">New Budget Name</string>
    <string name="success_new_budget">Successfully created new Budget</string>
    <string name="select_a_budget">Select a Budget</string>
    <string name="select_year">Select Year</string>
    <string name="select_month">Select Month</string>
    <string name="no_expense">You do not have any recorded expenses</string>
    <string name="no_revenue">You do not have any recorded revenue</string>


</resources>
