<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linHistoryText"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:background="@drawable/style_dialogues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/txtHistoryBudgetName"
            android:text="@string/budget_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/txtHistoryRevenue"
            android:text="@string/revenue"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:id="@+id/txtHistoryExpense"
            android:text="@string/expense"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/txtHistoryBalance"
            android:textAlignment="center"
            android:text="@string/remaining"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>