<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/edittext_style"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linRadioSetup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="53dp"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Select a Currency"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioSecMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioGH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ghCurrency" />

                    <RadioButton
                        android:id="@+id/radioNig"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nigNaira" />

                    <RadioButton
                        android:id="@+id/radioUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/usCurrency" />

                    <RadioButton
                        android:id="@+id/radioBrit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ukCurr" />

                    <RadioButton
                        android:id="@+id/radioEuro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/euroCurr" />

                    <RadioButton
                        android:id="@+id/radioCfa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cfaFranc" />

                    <RadioButton
                        android:id="@+id/radioJap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/japanCurr" />


                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linAmountSetup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtSecondAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_style"
                        android:hint="Enter your Start Amount" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linRefIdSetup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout69"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtSecondRefId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_style"
                        android:hint="Reference Id" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>


            <Button
                android:id="@+id/btnSubmitSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="66dp"
                android:background="@drawable/button_style"
                android:text="@string/submitCurr"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linAmountSetup" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progresSecondaryReg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:visibility="gone" />


</android.support.constraint.ConstraintLayout>